# diet_manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  diet_manager
data/: basic_food.json  composite_food.json  logs.json  user.json
docs/: design.md  diet_manager.puml  readme.txt
src/: cli.cpp  cli.h  main.cpp
src/manager/: food_database.cpp  food_database.h  user_profile.cpp  user_profile.h
src/managers/: food_database.cpp  food_database.h  log_manager.cpp  log_manager.h
src/models/: basic_food.cpp  basic_food.h  composite_food.cpp  composite_food.h  food.cpp  food.h  log_entry.cpp  log_entry.h  user.cpp  user.h
src/utils/: color.h  data_checker.h  food_entry_utils.h  format_cleanup.h  terminal_colors.cpp  terminal_colors.h  terminal_utils.h
submission/: Makefile  README.md  readme.txt
submission/data/: composite_food.json  user.json
submission/src/: cli.cpp  main.cpp
submission/src/manager/: food_database.cpp  user_profile.cpp
submission/src/models/: food.cpp  food.h  user.cpp  user.h
submission/src/utils/: terminal_colors.cpp  terminal_colors.h
